--- a/manifest.json
+++ b/manifest.json
@@ -1,12 +1,20 @@
 {
     "name": "Tc Coin Blockchain",
     "short_name": "Tc Coin",
-    "start_url": "/Tc-Coin/",
+    "start_url": "/tc-coin/",
     "display": "standalone",
     "background_color": "#000",
-    "theme_color": "#00ffff",
+    "theme_color": "#00FFFF",
     "icons": [
-        { "src": "/Tc-Coin/images/coin-tc-blockchain-192x192.webp", "sizes": "192x192", "type": "image/webp" },
-        { "src": "/Tc-Coin/images/coin-tc-blockchain-512x512.webp", "sizes": "512x512", "type": "image/webp" }
+        {
+            "src": "/tc-coin/images/coin-tc-blockchain-192x192.webp",
+            "sizes": "192x192",
+            "type": "image/webp"
+        },
+        {
+            "src": "/tc-coin/images/coin-tc-blockchain-512x512.webp",
+            "sizes": "512x512",
+            "type": "image/webp"
+        }
     ]
 }
